--- a/_sass/_topNav.scss
+++ b/_sass/_topNav.scss
@@ -15,20 +15,31 @@
 #hamburger{
   &.open {
     transform: rotate(-90deg);
-    transition: transform .6s;
+    transition: transform .3s;
   }
   &.close {
     transform: rotate(0deg);
-    transition: transform .6s;
+    transition: transform .3s;
   }
 }
 
 #mobileNav{
   &.open {
     display: flex;
+    height: 176px;
+    transition: height .3s;
+    div a{
+      transform: translateY(0);
+      transition: transform .3s;
+    }
   }
   &.close {
-    display: none;
+    height: 0;
+    transition: height .3s;
+    div a{
+      transform: translateY(-200px);
+      transition: transform .3s;
+    }
   }
 }
 
